--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,17 @@ footer {
   margin: 5px;
   font-size: 30px;
 }
+
+
+#contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.warning {
+  color: red;
+  display: none;
+}
